<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="200dp"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:theme="@style/h3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        style="@style/h4"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:text="@string/mainRegInRegister"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/questionInRegister"
        android:textSize="15sp"
        android:theme="@style/h3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <EditText
        android:id="@+id/regFirstNameRegister"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:hint="@string/nameInRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/regLastNameRegister"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:hint="@string/lastnameInRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regFirstNameRegister" />

    <EditText
        android:id="@+id/regEmailRegister"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:hint="@string/emailLogin"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regLastNameRegister" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/regPasswordRegister"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:hint="@string/passwordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEmailRegister" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/buttonRegisterRegister"
        style="@style/blueButtonStyle"
        android:layout_width="228dp"
        android:layout_height="48dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="28dp"
        android:background="@color/g_blue"
        android:text="@string/regRegrister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regPasswordRegister"
        tools:ignore="VisualLintButtonSize"
        app:spinning_bar_color="@color/white" />


    <ImageView
        android:id="@+id/googleLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/google_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisterRegister" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/gmailInRegister"
        app:layout_constraintBottom_toBottomOf="@+id/googleLoginRegister"
        app:layout_constraintEnd_toEndOf="@+id/googleLoginRegister"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="@+id/googleLoginRegister"
        app:layout_constraintTop_toTopOf="@+id/googleLoginRegister"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>