<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="127dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="134dp"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:theme="@style/h4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/h3"
            android:layout_width="366dp"
            android:layout_height="63dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="43dp"
            android:text="@string/descriptionOnStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegisterAccountOptions"
            style="@style/blueButtonStyle"
            android:layout_width="165dp"
            android:layout_height="54dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="128dp"
            android:layout_marginTop="164dp"
            android:layout_marginEnd="118dp"
            android:background="@color/g_blue"
            android:text="@string/buttonRegister"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.244" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLoginAccountOptions"
            style="@style/blueButtonStyle"
            android:layout_width="165dp"
            android:layout_height="54dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="27dp"
            android:background="@color/g_blue"
            android:text="@string/buttonLogin"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegisterAccountOptions" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>